--- a/ar_image.html
+++ b/ar_image.html
@@ -4,7 +4,7 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
     <a-assets>
-        <img id="transpImage" src="/02_similitude.jpg">
+        <img id="transpImage" src="/png.png">
     </a-assets>
     <a-image rotation="0 45 0" width="1" height="1" src="#transpImage"></a-image>
     <a-marker-camera preset='hiro'></a-marker-camera>
