--- a/ar_image2.html
+++ b/ar_image2.html
@@ -4,7 +4,7 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
     <a-assets>
-        <img id="transpImage" src="/me.jpg">
+        <img id="transpImage" src="/png.png">
     </a-assets>
     <a-image rotation="90 0 0" position="2,5 0 2" width="1" height="1" src="#transpImage"></a-image>
     <a-marker-camera preset='hiro'></a-marker-camera>
